# t-weather

./: Cargo.toml  README.md
ascii/: header.txt  partly_cloudy.txt  rain.txt  snow.txt  storm.txt  sunny.txt
src/: api.rs  main.rs  ui.rs  utils.rs  weather.rs
src/api/: api.rs  mod.rs
