[package]
name = "t-weather"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
crossterm = "0.28.1"
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["blocking"]}
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
tui = "0.19.0"
